fix: trailing whitespace replaced

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="contacts">
                 <h2>Contacts</h2>
                 <ul>
-                    <li><a href="tel:+9045531416">Phone: +79045531416</a></li>
+                    <li><a href="tel:+9045531416">Phone:&nbsp;+79045531416</a></li>
                     <li>Telegram: @N_a_d_i_n_a</li>
                     <li><a href="https://github.com/NadinK0">GitHub: NadinK0</a></li>
                     <li><a href="mailto:npantelyeva@gmail.com">e-mail: npantelyeva@gmail.com</a></li>
